@@ -38,6 +38,7 @@
     <clirr.comparisonVersion>1.3.2</clirr.comparisonVersion>
     <hsqldb.version>2.3.4</hsqldb.version>
     <jacoco.version>0.7.7.201606060606</jacoco.version>
+    <jacoco.itReportPath>${project.basedir}/../mybatis-generator-core/target/jacoco-it.exec</jacoco.itReportPath>
   </properties>
 
   <reporting>
@@ -69,16 +70,31 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+            <configuration>
+              <destFile>${jacoco.itReportPath}</destFile>
+              <propertyName>jacoco.agent.arg</propertyName>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-site-plugin</artifactId>
+        <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <!-- turn off be default, we'll turn it back on in the core project -->
-          <skip>true</skip>
+          <argLine>${jacoco.agent.arg} -Xmx1024m -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.eluder.coveralls</groupId>
-        <artifactId>coveralls-maven-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
         <configuration>
           <!-- turn off be default, we'll turn it back on in the core project -->
           <skip>true</skip>
